syntax = "proto3";

option java_package = "sdufu.finalwork.proto.product";

service ProductService {
	rpc GetProduct(ProdId) returns (APIResponse);
	rpc AddProduct(product) returns (APIResponse);
	rpc DeleteProduct(ProdId) returns (APIResponse);
}

message ProdId {
	int32 id = 1;
}

message product {
	string prodName = 1;
	int32 prodPrice = 2;
	int32 prodStock = 3;
}

message APIResponse {
	string responseMessage = 1;
	int32 messageCode = 2;
}
